# tamu-crossref-minting

./: .gitignore  README.md  pyproject.toml
tamu_crossref/crossref/: crossref.py
tests/: test_dois.py
tests/schema_copies/: fundref.xsd
tests/test_schemas/: schemas.xsd
