[tool.poetry]
name = "tamu_crossref"
version = "0.1.0"
description = ""
authors = ["Mark Baggett <markpbaggett@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
lxml = "^5.3.0"
click = "^8.1.7"

[tool.poetry.scripts]
crossref = "tamu_crossref.generate:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
